--- a/WalkFriends/Info.plist
+++ b/WalkFriends/Info.plist
@@ -2,9 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>프로그램을 실행하기 위해서 사용자 위치 권한이 필요합니다.</string>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Lemon Days.ttf</string>
 		<string>Letters for Learners Outline Bold.ttf</string>
 		<string>Letters for Learners Outline Light.ttf</string>
 		<string>Letters for Learners.ttf</string>
