--- a/WalkFriends/Info.plist
+++ b/WalkFriends/Info.plist
@@ -2,6 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>GIDClientID</key>
+    <string>196182040965-6u7s5s21g62l3sn8o5h45mg1d6tg2cno.apps.googleusercontent.com</string>
+    <key>CFBundleURLTypes</key>
+    <array>
+      <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>com.googleusercontent.apps.196182040965-6u7s5s21g62l3sn8o5h45mg1d6tg2cno</string>
+        </array>
+      </dict>
+    </array>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>사진 접근을 위해 권한이 필요합니다.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
