--- a/WalkFriends/Info.plist
+++ b/WalkFriends/Info.plist
@@ -2,21 +2,44 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>GIDClientID</key>
-    <string>196182040965-6u7s5s21g62l3sn8o5h45mg1d6tg2cno.apps.googleusercontent.com</string>
-    <key>CFBundleURLTypes</key>
-    <array>
-      <dict>
-        <key>CFBundleURLSchemes</key>
-        <array>
-          <string>com.googleusercontent.apps.196182040965-6u7s5s21g62l3sn8o5h45mg1d6tg2cno</string>
-        </array>
-      </dict>
-    </array>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>사진 접근을 위해 권한이 필요합니다.</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>프로그램을 실행하기 위해서 사용자 위치 권한이 필요합니다.</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb231951699690264</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.196182040965-6u7s5s21g62l3sn8o5h45mg1d6tg2cno</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>kakaofa3f46e81ac9f379807667f66c67067b</string>
+			</array>
+		</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>231951699690264</string>
+	<key>FacebookClientToken</key>
+	<string>16bec16d61db7f382d1d65d9d071f2da</string>
+	<key>FacebookDisplayName</key>
+	<string>WalkFriends</string>
+	<key>GIDClientID</key>
+	<string>196182040965-6u7s5s21g62l3sn8o5h45mg1d6tg2cno.apps.googleusercontent.com</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>kakaokompassauth</string>
+		<string>kakaolink</string>
+	</array>
 	<key>UIAppFonts</key>
 	<array>
 		<string>PartyConfettiRegular-eZOn3.ttf</string>
