--- a/WalkFriends/Info.plist
+++ b/WalkFriends/Info.plist
@@ -2,10 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>원활한 서비스 이용을 위해 현재 위치를 확인합나다.</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>원활한 서비스 이용을 위해 현재 위치를 확인합나다.</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -66,5 +62,9 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
